Fix: Make game fully functional - Quick match works with animations, ball physics, goal celebrations, and improved gameplay mechanics

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="menu-buttons">
                 <button class="menu-btn" onclick="showScreen('teamSelection')">🏆 CREATE TEAM</button>
                 <button class="menu-btn" onclick="showScreen('playerCustomization')">👤 CUSTOMIZE PLAYER</button>
-                <button class="menu-btn" onclick="showScreen('quickMatch')">🎮 QUICK MATCH</button>
+                <button class="menu-btn" onclick="startQuickMatch()">🎮 QUICK MATCH</button>
                 <button class="menu-btn" onclick="showScreen('tournament')">🏟️ TOURNAMENT</button>
                 <button class="menu-btn" onclick="showScreen('penalty')">⚽ PENALTY SHOOTOUT</button>
                 <button class="menu-btn" onclick="showScreen('leaderboard')">📊 LEADERBOARD</button>
